# Curator-multimodal-processing

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/actions/test-template/: action.yml
.github/workflows/: cicd-main.yml  release.yml  ruff.yml
.github/workflows/config/: .secrets.baseline
benchmarking/: Dockerfile  README.md  nightly-benchmark.yaml  run.py
benchmarking/runner/: env_capture.py  path_resolver.py  process.py  ray_cluster.py  session.py  utils.py
benchmarking/runner/sinks/: gdrive_sink.py  mlflow_sink.py  sink.py  slack_sink.py
benchmarking/scripts/: arxiv_e2e_pipeline_benchmark.py  common_crawl_benchmark.py  exact_dedup_identification_benchmark.py  fasttext_filter_benchmark.py  fuzzy_dedup_identification_benchmark.py  image_pipeline_benchmark.py  modifier_benchmark.py  ndd_benchmark.py  score_filter_benchmark.py  semdedup_identification_benchmark.py  video_pipeline_benchmark.py
benchmarking/tools/: gen_runscript_vars.py  run.sh
docker/: Dockerfile
docs/: broken_links_false_positives.json  index.md  project.json
docs/_extensions/ai_assistant/: __init__.py
docs/_extensions/content_gating/: condition_evaluator.py  document_filter.py
docs/_extensions/json_output/: utils.py
docs/_extensions/json_output/content/: extractor.py  metadata.py  text.py
docs/_extensions/json_output/core/: hierarchy_builder.py
docs/_extensions/json_output/processing/: cache.py  processor.py
docs/about/concepts/audio/: text-integration.md
docs/about/concepts/text/: data-processing-concepts.md
docs/about/release-notes/: index.md
docs/admin/: installation.md
docs/curate-text/load-data/: read-existing.md
docs/curate-text/process-data/content-processing/: index.md  text-cleaning.md
docs/curate-text/process-data/deduplication/: fuzzy.md  semdedup.md
docs/curate-text/process-data/language-management/: index.md  language.md
docs/curate-text/process-data/quality-assessment/: classifier.md  distributed-classifier.md  heuristic.md  index.md
docs/curate-text/process-data/specialized-processing/: code.md  index.md
docs/curate-text/synthetic/: llm-client.md  multilingual-qa.md
docs/curate-text/synthetic/nemotron-cc/: index.md
docs/curate-video/: save-export.md
docs/curate-video/process-data/: captions-preview.md  clipping.md  dedup.md  embeddings.md  filtering.md  frame-extraction.md  index.md
docs/curate-video/tutorials/: beginner.md  split-dedup.md
docs/get-started/: audio.md  image.md  text.md  video.md
docs/reference/infrastructure/: container-environments.md
nemo_curator/config/text/: code_filter_pipeline.yaml  fasttext_filter_pipeline.yaml  heuristic_filter_english_pipeline.yaml  heuristic_filter_non_english_pipeline.yaml
nemo_curator/core/: client.py  constants.py  utils.py
nemo_curator/metrics/: constants.py  start_prometheus_grafana.py  utils.py
nemo_curator/models/: vllm_model.py
nemo_curator/stages/: base.py  file_partitioning.py
nemo_curator/stages/audio/: common.py
nemo_curator/stages/audio/inference/: asr_nemo.py
nemo_curator/stages/audio/io/: convert.py
nemo_curator/stages/audio/metrics/: get_wer.py
nemo_curator/stages/pdf/: __init__.py  bbox_extraction.py  content_classification.py  content_routing.py  deep_analysis.py  download.py  image_conversion.py  image_extraction.py  layout_detection.py  postprocess.py  quality_filters.py  table_extraction.py  text_assembly.py  text_extraction.py  visual_analysis.py
nemo_curator/stages/synthetic/nemo_data_designer/: __init__.py  data_designer.py
nemo_curator/utils/: gpu_utils.py  nvcodec_utils.py  pdf_utils.py  prompts.py
tests/: conftest.py
tests/backends/: test_integration.py
tests/backends/experimental/: test_utils.py
tests/config/: test_run.py
tests/metrics/: test_metrics_utils.py
tests/models/: test_cosmos_embed1.py  test_qwen_vl.py  test_vllm_model.py
tests/models/client/: test_llm_client.py
tests/pdf_processing/: conftest.py  test_bbox_extraction.py  test_content_classification.py  test_deep_analysis.py  test_image_extraction.py  test_layout_detection.py  test_pdf_to_image.py  test_table_extraction.py  test_text_extraction.py
tests/stages/common/: test_base.py  test_client_partitioning.py  test_file_partitioning.py
tests/stages/deduplication/: test_id_generator.py
tests/stages/pdf/: test_content_routing.py  test_download.py  test_layout_detection.py  test_quality_filters.py  test_text_assembly.py
tests/stages/synthetic/: test_qa_multilingual_synthetic.py
tests/tasks/: test_video.py
tests/utils/: test_decoder_utils.py  test_nvcodec_utils.py  test_pdf_utils.py
tutorials/: quickstart.py
tutorials/multimodal_extraction/: 0_download.py  1_run_data_extraction.py  2_remove_duplicates.py  3_run_quality_filters.py
tutorials/pdf_processing/: 0_download.py  0_download_and_prepare_data.py  1_prepare_data.py  1_run_data_extraction.py  1_run_extraction.py  2_remove_duplicates.py  2_run_extraction.py  3_remove_duplicates.py  3_run_quality_filters.py  4_run_quality_filters.py  README.md  datasets.json  visualize_extraction.py  visualize_layout.py
tutorials/pdf_processing/source/: pdf_urls.jsonl
tutorials/synthetic/: synthetic_data_generation_example.py
tutorials/synthetic/nemo_data_designer/: ndd_data_generation_example.py
tutorials/synthetic/nemotron_cc/: nemotron_cc_pipelines.py  nemotron_cc_sdg_high_quality_example_pipeline.py  nemotron_cc_sdg_low_quality_example_pipeline.py
tutorials/text/distributed-data-classification/: README.md  aegis-classification.ipynb  content-type-classification.ipynb  domain-classification.ipynb  fineweb-edu-classification.ipynb  fineweb-mixtral-edu-classification.ipynb  fineweb-nemotron-edu-classification.ipynb  instruction-data-guard-classification.ipynb  multilingual-domain-classification.ipynb  prompt-task-complexity-classification.ipynb  quality-classification.ipynb
tutorials/text/llama-nemotron-data-curation/: README.md  main.py
tutorials/text/megatron-tokenizer/: main.py
tutorials/text/peft-curation/: main.py  stages.py
tutorials/text/tinystories/: main.py  stages.py
(+63 files in other folders)
